--- a/animation.html
+++ b/animation.html
@@ -2,62 +2,140 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8">
-  <title>class</title>
-  <style>
-    html {
-      overflow: hidden;
-    }
+	<meta charset="UTF-8">
+	<title>class</title>
+	<style>
+		canvas {
+			position: absolute;
+		}
 
-    canvas {
-      position: absolute;
-    }
-
-    body {
-      margin: 0;
-    }
-  </style>
+		body {
+			margin: 0;
+		}
+	</style>
 
 </head>
 
 <body>
-  <canvas></canvas>
+	<canvas></canvas>
 </body>
 <script>
-  var canvas = document.querySelector('canvas');
+	var canvas = document.querySelector('canvas');
+	var c = canvas.getContext('2d');
 
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
+	canvas.width = window.innerWidth;
+	canvas.height = window.innerHeight;
 
-  var c = canvas.getContext('2d');
+	window.addEventListener('resize', function () {
+		canvas.width = window.innerWidth;
+		canvas.height = window.innerHeight;
 
-  var x = Math.random() * innerWidth;
-  var y = Math.random() * innerHeight;
-  var dx = (Math.random() - 0.5) * 8;
-  var dy = (Math.random() - 0.5) * 8;
-  var radius = 30;
+		init();
+	});
 
-  function animate() {
-    requestAnimationFrame(animate);
+	var mouse = {
+		x: undefined,
+		y: undefined
+	}
 
-    c.beginPath();
-    c.clearRect(0, 0, innerWidth, innerHeight);   //если c.clearRect(0, 0, innerWidth, innerHeight); и circle.draw(); поместить после c.beginPath(); будет привязка линией :)
-    c.arc(x, y, radius, 0, Math.PI * 2, false);
-    c.strokeStyle = "blue";
-    c.stroke();
+	var maxRadius = 40;
+	// minRadius = 2;
 
-    x += dx;
-    y += dy;
+	var colorArray = [
+		'#248EA6',
+		'#25C7D9',
+		'#F2D338',
+		'#F2762E',
+		'#F23030',
+	];
 
-    if (x + radius > innerWidth || x - radius < 0) {
-      dx = -dx;
-    }
-    if (y + radius > innerHeight || y - radius < 0) {
-      dy = -dy;
-    }
-  }
+	window.addEventListener('mousemove', function (event) {
+			mouse.x = event.x;
+			mouse.y = event.y;
+			//console.log(mouse);
+	});
 
-  animate();
+	function Circle(x, y, dx, dy, radius) {
+		this.x = x;
+		this.y = y;
+		this.dx = dx;
+		this.dy = dy;
+		this.radius = radius;
+		this.minRadius = radius;
+		this.color = colorArray[Math.floor(Math.random() * colorArray.length)]; //округляем рандомное число до целого значения
+
+		this.draw = function () {
+			c.beginPath();
+			c.arc(this.x, this.y, this.radius, 0, Math.PI * 2, false);
+			c.fillStyle = this.color;
+			c.fill();
+		}
+
+		this.update = function () {
+			if (this.x + this.radius > innerWidth || this.x - this.radius < 0) {
+				this.dx = -this.dx;
+			}
+			if (this.y + this.radius > innerHeight || this.y - this.radius < 0) {
+				this.dy = -this.dy;
+			}
+
+			this.x += this.dx;
+			this.y += this.dy;
+
+			//interactiviti
+
+			if (mouse.x - this.x < 50 && mouse.x - this.x > -50 && mouse.y - this.y < 50 && mouse.y - this.y > -
+				50) { //финт ушами!
+				if (this.radius < maxRadius) {
+					this.radius += 1;
+				}
+			} else if (this.radius > this.minRadius) {
+				this.radius -= 1; // исходя(после) из предыдущего условия, уменьшить радиус
+			}
+
+			this.draw();
+		}
+	}
+
+	var circleArray = [];
+
+	for (var i = 0; i < 600; i++) {
+		var radius = Math.random() * 3 + 1;
+		var x = Math.random() * (innerWidth - radius * 2) + radius;
+		var y = Math.random() * (innerHeight - radius * 2) + radius;
+		var dx = (Math.random() - 0.5);
+		var dy = (Math.random() - 0.5);
+		circleArray.push(new Circle(x, y, dx, dy, radius));
+	}
+	//console.log(circleArray);
+	var circleArray = [];
+
+	function init() {
+
+		circleArray = []; //не дает запускать каждый цикл при динамическом расширении окна
+
+		for (var i = 0; i < 500; i++) {
+			var radius = Math.random() * 3 + 1;
+			var x = Math.random() * (innerWidth - radius * 2) + radius;
+			var y = Math.random() * (innerHeight - radius * 2) + radius;
+			var dx = (Math.random() - 0.5);
+			var dy = (Math.random() - 0.5);
+			circleArray.push(new Circle(x, y, dx, dy, radius));
+		}
+	}
+
+	function animate() {
+		requestAnimationFrame(animate);
+
+		c.clearRect(0, 0, innerWidth, innerHeight);
+
+		for (var i = 0; i < circleArray.length; i++) {
+			circleArray[i].update();
+		}
+	}
+
+	init();
+	animate();
 </script>
 
 </html>
